// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SeoService generateRobotsTxt robots are allowed 1`] = `
"User-agent: *
Allow: /
Sitemap: https://hostname/sitemap.xml"
`;

exports[`SeoService generateRobotsTxt robots are not allowed 1`] = `
"User-agent: *
Disallow: /
Sitemap: https://hostname/sitemap.xml"
`;

exports[`SeoService generateSitemap 1`] = `
"<urlset xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\"><url>
      <loc>https://%D0%BD%D0%B0%D0%B4%D1%8F-%D0%B2%D1%8F%D0%B6%D0%B5%D1%82.%D1%80%D1%84/%D0%BC%D1%83%D0%B6%D1%81%D0%BA%D0%BE%D0%B8-%D0%B6%D0%B0%D0%BA%D0%B5%D1%82-%D1%81-%D0%B2%D0%BE%D1%80%D0%BE%D1%82%D0%BD%D0%B8%D0%BA%D0%BE%D0%BC-%D1%81%D1%82%D0%BE%D0%B8%D0%BA%D0%BE%D0%B8/</loc>
      <lastmod>2021-01-11T20:00:00.000Z</lastmod>
      </url><url>
      <loc>https://%D0%BD%D0%B0%D0%B4%D1%8F-%D0%B2%D1%8F%D0%B6%D0%B5%D1%82.%D1%80%D1%84/post2/</loc>
      <lastmod>2021-01-12T20:00:00.000Z</lastmod>
      </url></urlset>"
`;
